# GOPH619_Labs

./: .test.py.swp  README.md  pyproject.toml
Lab1/: 619_Assignment1.ipynb  619_Lab1.ipynb  Lab2.ipynb
Project/: Project.ipynb  WaveTest.ipynb  project_main.py
Project/.ipynb_checkpoints/: Test-checkpoint.ipynb  WaveTest-checkpoint.ipynb
src/619LabFunctions/: function.py
src/619LabFunctions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/619ProjectFunctions/: project_functions.py
